backend+frontend fixes

--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,7 @@
 # Oracle Database
 ORACLE_USER=system
 ORACLE_PASSWORD=oracle
-ORACLE_DSN=localhost:1521/XE
+ORACLE_DSN=localhost:1522/XE
 
 # Flask Config
 FLASK_APP=run.py
@@ -14,3 +14,5 @@ JWT_ACCESS_TOKEN_EXPIRES=86400
 
 # CORS
 CORS_ORIGINS=http://localhost:5173
+PORT=5000
+FLASK_ENV=development
